fix: layout breaking

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,7 +14,6 @@
   -webkit-text-size-adjust: 100%;
 
   --primary-color: #0077b6;
-  --secondary-color: #48cae4;
   --background-color: #f8f9fa;
   --text-color: #333;
   --accent-color: #ffd60a;
